--- a/test_oa_project/www/Templets/System/Personnel/editPosition.html
+++ b/test_oa_project/www/Templets/System/Personnel/editPosition.html
@@ -183,6 +183,8 @@
                     });
                 });
             };
+            selectbox();
+            checknode();
         },1);
         //获取职位列表
         common_ajax2('','/SystemApi/Role/getRoleList','no',function(redata){
