--- a/test_oa_project/www/Templets/System/Personnel/editPosition.html
+++ b/test_oa_project/www/Templets/System/Personnel/editPosition.html
@@ -148,118 +148,7 @@
     <dd class="fxDone" data-value="{{ v.id }}">{{ v.name }}</dd>
     {{#  }); }}
 </script>
-<script src="__PUBLIC__/js/jquery-1.7.2.js"></script>
-<script src="__PUBLIC__/js/layui/layui.js"></script>
-<script src="__PUBLIC__/js/layer/layer.js"></script>
-<script src="__PUBLIC__/js/addPermissions.js"></script>
-<script src="__PUBLIC__/js/common.js"></script>
-<script src="__PUBLIC__/js/jquery.treetable.js"></script>
-<script type="text/javascript">
-    $(document).ready(function() {
-        var data = {
-            role_id:$.getUrlParam('role_id')
-        };
-        //获取职位详情
-        common_ajax2(data,'/SystemApi/Role/getRoleInfo','no',function(redata){
-            if(redata.data){
-                layui.use('laytpl', function(){
-                    var laytpl = layui.laytpl;
-                    laytpl(demo_body.innerHTML).render(redata.data, function(result){
-                        $('.addPerMiddle').html(result);
-                    });
-                });
-            };
-        },1);
-        //获取部门列表
-        common_ajax2('','/SystemApi/Department/getDepartmentList','no',function(redata){
-            if(redata.data.data){
-                layui.use('laytpl', function(){
-                    var laytpl = layui.laytpl;
-                    laytpl(demo.innerHTML).render(redata.data.data, function(result){
-                        $('#dp-list').html(result);
-                        var department_id = $(':input[name="department_id"]').val();
-                        var department_name = $('#dp-list').find('.fxDone[data-value="'+department_id+'"]').text();
-                        $('#dp-list').find('.select_title').text(department_name);
-                    });
-                });
-            };
-            selectbox();
-            checknode();
-        },1);
-        //获取职位列表
-        common_ajax2('','/SystemApi/Role/getRoleList','no',function(redata){
-            if(redata.data.data){
-                layui.use('laytpl', function(){
-                    var laytpl = layui.laytpl;
-                    laytpl(demo2.innerHTML).render(redata.data.data, function(result){
-                        $('#role-list').html(result);
-                        var role_id = $(':input[name="pid"]').val();
-                        var role_name = $('#role-list').find('.fxDone[data-value="'+role_id+'"]').text();
-                        $('#role-list').find('.select_title').text(role_name);
-                    });
-                });
-            };
-            selectbox();
-            checknode();
-        },1);
-        //树配置
-        $("#boxTabel").treeTable({
-            expandable: true,
-        });
-        //获取已有权限
-        common_ajax2(data,'/SystemApi/Role/getRoleNode','no',function(reflag){
-            if(reflag.code && reflag.code!=0){
-                layer.closeAll();
-                layer.msg(reflag.msg,{icon:2});
-            }else{
-                layer.closeAll('loading');
-                var on_nodes=reflag.data;
-                if(on_nodes!=null){
-                    on_nodes = on_nodes.split(',');
-                    if(on_nodes){
-                        for(var i=0;i<on_nodes.length;i++){
-                            $('#node-'+on_nodes[i]).children().children('.radio').attr('checked',true);
-                        }
-                    };
-                };
-            };
-        },1);
-        //提交
-        $(document).on('click','.addPerSubmit',function() {
-            //获取node_id
-            var access='';
-            if($('.radio:checked').length>0){
-                for(var i=0;i<$('.radio:checked').length;i++){
-                    var Obj = null;
-                    Obj = $('.radio:checked').eq(i);
-                    if(i==0){
-                        access+=Obj.val()+'-'+Obj.attr('pid')+'-'+Obj.attr('level');
-                    }else{
-                        access+=','+Obj.val()+'-'+Obj.attr('pid')+'-'+Obj.attr('level');
-                    }
-                }
-            }
-            var data = {
-                role_id:$.getUrlParam('role_id'),
-                positionname:$(':input[name="positionname"]').val(),
-                remark:$(':input[name="remark"]').val(),
-                department_id:$(':input[name="department_id"]').val(),
-                superiorid:$(':input[name="superiorid"]').val(),
-                sort:$(':input[name="sort"]').val(),
-                display:$(':input[name="display"]:checked').val(),
-                access:access
-            };
-            common_ajax2(data,'/SystemApi/Role/editRole',0,function(redata){
-                if(redata.code!=0){
-                    layer.msg(redata.msg,{icon:2});
-                }else{
-                    layer.msg('操作成功',{icon:1});
-                    window.location.href = "{:U('/System/Personnel/position')}";
-                };
-            });
-        });
-    });
-</script>
+<Zelin:js  src="jquery-1.7.2,/layui/layui,/layer/layer,common,jquery.treetable,personnel.editposition"  />
 </body>
 
 </html>
